--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -188,10 +188,12 @@ iframe
 	border-radius 2px
 img
 	border-radius 2px
+	box-sizing content-box
 	display block
 video
 	background black
 	border-radius 2px
+	box-sizing content-box
 	display block
 
 // Interactive
