--- a/src/ui/post/Comment.pug
+++ b/src/ui/post/Comment.pug
@@ -73,8 +73,9 @@ style.
 	.comment-replies
 		margin-top 2.25em
 	.comment-text
-		background white
+		background #fff
 		border-radius 5px
+		color #000
 		padding 1ch
 		width 420px
 	:global(.comment-text img)
