--- a/src/ui/post/Headline.pug
+++ b/src/ui/post/Headline.pug
@@ -51,10 +51,8 @@ style.
 		justify-self center
 	.post-card
 		align-items baseline
-		background white
 		border 1px solid transparent
 		border-radius 5px
-		color rgba(0,0,0,0.5)
 		display grid
 		font-size 14px
 		gap 0 6px
@@ -65,7 +63,7 @@ style.
 		position relative
 		text-align left
 		&:hover
-			color rgba(0,0,0,0.9)
+			color wheat
 		&.selected
 			background aliceblue
 			color rgba(0,0,0,0.9)
