--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -56,7 +56,7 @@ hr
 .md
 	a
 		color lightskyblue
-		overflow-wrap break-word
+		overflow-wrap anywhere
 		text-decoration none
 	a:is([href^='/'], [href^='#'])::before
 		background lightsalmon
