--- a/src/ui/post/Post.pug
+++ b/src/ui/post/Post.pug
@@ -13,14 +13,19 @@ script.
 	DOM =
 		post: null
 	error = null
-	replies_loading = false
+	more_replies_loading = false
 	post = null
+	profile_data_loaded = false
 	api.loadWatch(api.ID('post', short_id),
 		(x) ->
 			{ data: post, error } = x
+			if post?.contributors?.length
+				api.loadWatch(api.ID('users', post.contributors),
+					(x) -> if x.data or x.error then profile_data_loaded = true
+				)
 			if post?.more_replies
 				api.watch(post.more_replies_id,
-					(x) -> { loading: replies_loading } = x
+					(x) -> { loading: more_replies_loading } = x
 				)
 	)
 	current_scroll = 0
@@ -121,14 +126,14 @@ svelte:head
 					SelftextMarkup(html={post.selftext_html})
 		section.post-comments
 			h1.post-comments-label Comments
-			{#if post.replies?.length}
+			{#if post.replies?.length && profile_data_loaded}
 				{#key post.replies}
 					ol.post-comments-list
 						{#each post.replies as reply_short_id}
 							Comment(short_id={reply_short_id})
 						{#if post.more_replies}
 							.post-more-replies
-								Button(action={() => api.load(post.more_replies_id)} appearance='text' loading={replies_loading} text="+ {post.num_more_replies} more {post.num_more_replies === 1 ? 'reply' : 'replies'}...")
+								Button(action={() => api.load(post.more_replies_id)} appearance='text' loading={more_replies_loading} text="+ {post.num_more_replies} more {post.num_more_replies === 1 ? 'reply' : 'replies'}...")
 			menu.post-comments-actions
 				Button(disabled={post.archived || post.locked} text='+ Add a comment...')
 		figure.post-minimap
