--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -53,11 +53,13 @@ hr
 	margin 1em 0 0 0
 
 // Formatted text
+a
+	color inherit
+	overflow-wrap anywhere
+	text-decoration none
 .md
 	a
 		color lightskyblue
-		overflow-wrap anywhere
-		text-decoration none
 	a:is([href^='/'], [href^='#'])::before
 		background lightsalmon
 		border-radius 999px
