--- a/src/ui/post/Comment.pug
+++ b/src/ui/post/Comment.pug
@@ -28,12 +28,13 @@ script.
 			<!-- svelte-ignore a11y-unknown-role -->
 			article.comment(role='comment')
 				Avatar(username={comment.author})
-				section.comment-text(title='{Format.time.sRelative(comment.created_utc)} ago by u/{comment.author}')
+				.comment-body
 					.comment-meta
 						span.comment-score {comment.score}
-						span.comment-author {comment.author}
-					Markup(html={comment.body_html})
-				section.comment-actions
+						a.comment-author(href='/u/{comment.author}') {comment.author}
+					.comment-text(title='{Format.time.sRelative(comment.created_utc)} ago ({Format.time.sAbsolute(comment.created_utc)})')
+						Markup(html={comment.body_html})
+				.comment-actions
 					Score(awards={comment.all_awardings} controversiality={comment.controversiality} upload_vote={(vote) => api.submit(api.ID('comment_vote', short_id), { numerical_vote: vote })} value={!comment.score_hidden && comment.score} vote={comment.likes == null ? 0 : comment.likes ? 1 : -1})
 			{#if !out_of_context && comment.replies.length > 0}
 				{#key comment.replies}
@@ -60,19 +61,17 @@ style.
 		padding 1ch 0
 	.comment-author
 		font-size 12px
+	.comment-body
+		color #ccc
+		padding 1ch
 	.comment-meta
-		opacity 0.5
+		color #888
 	.comment-replies
 		border-left 4px solid #666
 		padding-left 20px
 		padding-top 10px
 	.comment-score
 		font-size 18px
-	.comment-text
-		background #444
-		border-radius 5px
-		color #ccc
-		padding 1ch
 	:global(.comment-text img)
 		border-radius 6px
 		display inline
