--- a/src/ui/home/Home.pug
+++ b/src/ui/home/Home.pug
@@ -1,7 +1,7 @@
 script.
 	import { getContext } from 'svelte'
-	import api from '../api/index.js'
-	import Button from './controls/Button.pug'
+	import api from '../../api/index.js'
+	import Button from '../input/Button.pug'
 	num_unread_messages = 0
 	query = ''
 	if getContext('username')
