--- a/src/ui/input/Button.pug
+++ b/src/ui/input/Button.pug
@@ -1,5 +1,5 @@
 script.
-	import hotkey from './useActions/hotkey.coffee'
+	import hotkey from './use_hotkey.coffee'
 	import HotkeyLabel from './HotkeyLabel.pug'
 	export action = null
 	export activated = false
