--- a/src/ui/media/MediaPlayer.pug
+++ b/src/ui/media/MediaPlayer.pug
@@ -1,7 +1,7 @@
 script.
 	import { onMount } from 'svelte'
 	import { Format } from '../../utils/index.js'
-	import Button from '../controls/Button.pug'
+	import Button from '../input/Button.pug'
 	export audio_url = null
 	export dimensions = [480, 480]
 	export mimic_gif = false
