--- a/src/ui/message/PrivateMessage.pug
+++ b/src/ui/message/PrivateMessage.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../api/index.js'
-	import Markup from '../text/Markup.pug'
+	import Markup from '../markup/Markup.pug'
 	export short_id = null
 	private_message = null
 	api.loadWatch(api.ID('private_message', short_id),
