--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -3,7 +3,7 @@
 	font-family 'Inter'
 	font-style normal italic
 	font-weight 100 900
-	src url('../font/inter_100_900.woff2')
+	src url('../asset/inter_100_900.woff2')
 html
 	color-scheme dark
 	--color-control rgba(0,0,0,0.05)
@@ -12,10 +12,6 @@ html
 	--color-paper-action aliceblue
 	--color-paper-border gainsboro
 	--color-paper-callout rgba(0,0,0,0.05)
-	--color-signal-caution wheat
-	--color-signal-error salmon
-	--color-signal-ok lightseagreen
-	--color-signal-unknown gray
 	--color-writing-action mediumslateblue
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
 
