--- a/src/ui/account/AccountSwitcher.pug
+++ b/src/ui/account/AccountSwitcher.pug
@@ -1,6 +1,6 @@
 script.
-	import Button from '../controls/Button.pug'
 	import api from '../../api/index.js'
+	import Button from '../input/Button.pug'
 	logout = ->
 		api.logout()
 		delete localStorage['account.username']
