--- a/src/ui/post/Comment.pug
+++ b/src/ui/post/Comment.pug
@@ -1,9 +1,9 @@
 script.
-	import { Format } from '../../utils/index.js'
 	import api from '../../api/index.js'
-	import Avatar from './Avatar.pug'
-	import Button from '../controls/Button.pug'
-	import Markup from '../text/Markup.pug'
+	import { Format } from '../../utils/index.js'
+	import Avatar from '../user/Avatar.pug'
+	import Button from '../input/Button.pug'
+	import Markup from '../markup/Markup.pug'
 	import Score from './Score.pug'
 	export out_of_context = false
 	export short_id = null
