--- a/src/ui/subreddit/WikiPage.pug
+++ b/src/ui/subreddit/WikiPage.pug
@@ -1,11 +1,12 @@
 script.
 	import { Format } from '../../utils/index.js'
 	import api from '../../api/index.js'
-	import Markup from '../text/Markup.pug'
-	import PageUnavailable from '../errors/PageUnavailable.pug'
+	import Markup from '../markup/Markup.pug'
+	import Unavailable from '../error/Unavailable.pug'
 	export page_name = null
 	export revision_id = null
 	export subreddit_name = null
+	console.log page_name
 	error = null
 	page = null
 	api.loadWatch(
@@ -20,7 +21,7 @@ svelte:head
 	title wiki: {subreddit_name}: {page_name.split('/').join(': ')}
 {#if error}
 	{#if error instanceof api.errors.ServerError}
-		PageUnavailable(path="/r/{subreddit_name}/wiki/{page_name}{revision_id ? '?v=' + revision_id : ''}")
+		Unavailable(path="/r/{subreddit_name}/wiki/{page_name}{revision_id ? '?v=' + revision_id : ''}")
 {#if page}
 	main.wiki-page
 		h1.wiki-page-name {subreddit_name} / {page_name.split('/').join(' / ')}
