--- a/src/ui/user/Avatar.pug
+++ b/src/ui/user/Avatar.pug
@@ -8,14 +8,11 @@ script.
 				img_url = user.profile_img
 		)
 
-
-img.avatar(alt='' src={img_url})
+a(href='/u/{username}')
+	img.avatar(alt='u/{username}' src={img_url})
 
 style.
 	.avatar
 		aspect-ratio 1
 		border-radius 999px
 		height 20px
-		position relative
-		left -7px
-		top 13px
